[gd_scene load_steps=9 format=3 uid="uid://27qju6mnlrr7"]

[ext_resource type="Script" uid="uid://cu0r225osmklj" path="res://scripts/characters/kairis.gd" id="1_8k3e5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3emnh"]
radius = 20.0

[sub_resource type="Gradient" id="Gradient_k5vcc"]
offsets = PackedFloat32Array(0, 0.0194805, 0.948052, 1)
colors = PackedColorArray(0, 0, 0, 1, 1.54018e-06, 0.510009, 0.336497, 1, 0.532468, 0.532468, 0.532468, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3emnh"]
gradient = SubResource("Gradient_k5vcc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5vcc"]
size = Vector2(19.25, 6)

[sub_resource type="Animation" id="Animation_3emnh"]
length = 0.3

[sub_resource type="Animation" id="Animation_k5vcc"]
resource_name = "dagger_attack"
length = 0.3
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"DaggerHolder: rotation_degrees",
"time": 0.0
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSystem:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0999056, 0.200477),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponSystem/DaggerHolder/DaggerHitArea/HitShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0995726, 0.200477),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_idq7d"]
_data = {
&"RESET": SubResource("Animation_3emnh"),
&"dagger_attack": SubResource("Animation_k5vcc")
}

[node name="ShadowMonarch" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_8k3e5")

[node name="Collision" type="CollisionShape2D" parent="." groups=["player"]]
shape = SubResource("CircleShape2D_3emnh")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 1, 1)
texture = SubResource("GradientTexture2D_3emnh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="WeaponSystem" type="Node2D" parent="."]

[node name="DaggerHolder" type="Node2D" parent="WeaponSystem"]
scale = Vector2(-4, 1)

[node name="DaggerBlade" type="ColorRect" parent="WeaponSystem/DaggerHolder"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
offset_left = -20.5
offset_top = -4.0
offset_right = 3.5
offset_bottom = 23.0
scale = Vector2(0.8, 0.15)
color = Color(0.752941, 0.752941, 0.752941, 1)
metadata/_edit_use_anchors_ = true

[node name="DaggerHandle" type="ColorRect" parent="WeaponSystem/DaggerHolder"]
modulate = Color(0.25098, 0.25098, 0.25098, 1)
offset_left = -3.0
offset_top = -6.0
offset_right = 7.0
offset_bottom = 48.0
scale = Vector2(0.4, 0.15)
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="DaggerHitArea" type="Area2D" parent="WeaponSystem/DaggerHolder"]

[node name="HitShape" type="CollisionShape2D" parent="WeaponSystem/DaggerHolder/DaggerHitArea"]
position = Vector2(-10.75, -2)
shape = SubResource("RectangleShape2D_k5vcc")
disabled = true

[node name="WeaponAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_idq7d")
}
